--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
 .App {
   text-align: center;
+  display: flex;
+  height: 100%;
 }
+
+.leftList {
+  background-color: lightgray;
+  margin: 1vh;
+  height: 100vh;
+  width: 80vh;
+}
+
+.rightList {
+  display: flex;
+  background-color: white;
+  height: 100vh;
+  width: 100%;
+  margin: 1vh;
+  align-items: center;
+  justify-content: center;
+}
+
