--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: lightgray;
+  height: 100%;
+  background-color: black;
 }
+
