--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,14 @@
   background-color: #020428;
   margin: 1vh;
   height: 98vh; /* 98 so that the 1vh margins dont make it scroll */
-  width: 60vh;
+  width: 20vh;
+}
+
+.middleList {
+  background-color: #020428;
+  margin: 1vh;
+  height: 98vh; /* 98 so that the 1vh margins dont make it scroll */
+  width: 70vh;
   overflow-y: scroll;
 }
 
